--- a/flex.html
+++ b/flex.html
@@ -41,11 +41,14 @@
 
         #item-1{
             order: 2;
+            flex-grow: 2;
         }
 
         #item-2{
             order: 1;
+            flex-grow: 3;
         }
+
     </style>
 </head>
 <body>
