--- a/form.html
+++ b/form.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FORM</title>
+    <style>
+        .h span{
+            background-color: blueviolet;
+        }
+
+        .h{
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
-    <h1>Student Registration Form</h1>
+    <h1 class="h"><span>Student Registration Form</span></h1>
     <hr>
     <br>
     <form>
